force-app/main/default/objects/CBS_Runtime_Config__mdt/CBS_Runtime_Config__mdt.object-meta.xml
<CustomObject>
    <description>Central runtime configuration for environment-specific URLs and toggles.</description>
    <label>CBS Runtime Config</label>
    <pluralLabel>CBS Runtime Configs</pluralLabel>
</CustomObject>