force-app/main/default/objects/CBS_Runtime_Config__mdt/fields/Environment_Code__c.field-meta.xml
<CustomField>
    <fullName>Environment_Code__c</fullName>
    <description>Optional environment marker, for example DEV/UAT/PROD.</description>
    <label>Environment Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>