force-app/main/default/objects/CBS_Runtime_Config__mdt/fields/Guest_Site_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Guest_Site_Base_Url__c</fullName>
    <description>Environment-specific guest site base URL used for consent links. Do not include trailing slash.</description>
    <label>Guest Site Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>