force-app/main/default/objects/CBS_Runtime_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only one record should be active per org.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>